@@ -1,3 +1,8 @@
+2011-08-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/50179
+	* c-c++-common/Wunused-var-14.c: New test.
+
 2011-08-26  Tom de Vries  <tom@codesourcery.com>
 
 	* gcc.dg/tree-ssa/ivopts-lt.c: New test.
